# NL2Data

./: .env.example  .gitignore  Improvement.md  PROJECT_OVERVIEW.md  clean_test_output.sh  convert_queries_to_json.py  example queries.txt  example_queries.json  generate_test_report.py  requirements.txt  test_all_queries.py  test_new_features.py  test_phase1_evaluation.py
nl2data/: example_description.txt  pyproject.toml
nl2data/scripts/: nl2data.py
nl2data/src/nl2data/: __init__.py
nl2data/src/nl2data/agents/: __init__.py  base.py  orchestrator.py  runner.py
nl2data/src/nl2data/cli/: __init__.py  app.py
nl2data/src/nl2data/config/: __init__.py  logging.py  settings.py
nl2data/src/nl2data/evaluation/: __init__.py  config.py  integrity.py  relational_eval.py  report_builder.py  report_models.py  schema.py  schema_eval.py  stats.py  table_eval.py  workload.py
nl2data/src/nl2data/generation/: __init__.py  allocator.py  column_sampling.py  constants.py  derived_eval.py  derived_program.py  derived_registry.py  enforce.py  error_logging.py  event_eval.py  facts.py  ir_helpers.py  type_enforcement.py  uniqueness.py  window_eval.py
nl2data/src/nl2data/ir/: __init__.py  conceptual.py  constraint_ir.py  dataset.py  generation.py  logical.py  requirement.py  validators.py  workload.py
nl2data/src/nl2data/monitoring/: __init__.py  quality_metrics.py
nl2data/src/nl2data/prompts/: __init__.py  loader.py
nl2data/src/nl2data/utils/: __init__.py  agent_factory.py  (+2 more)
nl2data/tests/: __init__.py  test_derived_dsl.py  test_derived_regression.py  test_ir_models.py
(+208 files in other folders)
